--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-试用
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>五子棋游戏</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>五子棋游戏</h1>
+        <div class="game-info">
+            <div class="status">当前玩家: <span id="current-player">黑棋</span></div>
+            <div class="winner" id="winner-message"></div>
+        </div>
+        <div class="game-board" id="game-board"></div>
+        <div class="controls">
+            <button id="restart-btn">重新开始</button>
+            <button id="undo-btn">悔棋</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
